# python-est

./: .gitattributes  .gitignore  APPROACH_COMPARISON.md  ARCHITECTURE.md  AUTHENTICATION_SUMMARY.md  BOOTSTRAP_README.md  CISCO_LIBEST_ANALYSIS.md  CLIENT_SETUP.md  CONFIG_EXPLANATION.md  CONTRIBUTING.md  CRITICAL_FINDINGS.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_VERIFICATION_REPORT.md  DEPLOY_FIX_NOW.md  DEPLOY_TO_VM.md  DIAGRAMS.md  DOCKERFILE_FIXES.md  DOCKER_LIBEST_DEPLOY.md  Dockerfile  Dockerfile.fixed  Dockerfile.libest  EMERGENCY_PLAN.md  FINAL_FIXES_SUMMARY.md  FIXES_APPLIED.md  FIX_RA_AUTH.md  FIX_SERVER_CERT_IP.md  IQE_CHANGES_SUMMARY.md  IQE_INTEGRATION.md  IQE_UI_BASE64_FIX.md  IQE_UI_FIX.md  IQE_logs.md  LIBEST_QUICKSTART.md  LIBEST_STEP_BY_STEP.sh  LIBEST_TROUBLESHOOTING.md  LICENSE  MANUAL_DEPLOYMENT.md  MEDIUM_ARTICLE.md  MEDIUM_ARTICLE_FORMATTED.md  MEDIUM_ARTICLE_HTML.html  (+80 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml
docker/: Dockerfile  Dockerfile.radius  entrypoint.sh  radius-entrypoint.sh
docs/: ARCHITECTURE_DECOUPLED.md  AUTHENTICATION_FLOW.md  CISCO_WLC_CONFIG.md  COMMANDS.md  COMMANDS_DECOUPLED.md  DEPLOY_COMPLETE_STACK.md  DEPLOY_DECOUPLED.md  deploy_instr.md  project-structure.md
examples/: create_srp_users.py  demo_client.py  est_demo_interactive.py  est_demo_server.py  setup_certs.py  simple_demo.py
nginx/: nginx.conf
python_est/config/: openssl.conf
python_est/core/: est_handler.py  helper.py  secureserver.py
python_est/handlers/: openssl_ca_handler_fixed.py
radius/: clients.conf  eap  generate_radius_certs.sh  radiusd.conf
scripts/: create_iqe_user.py  generate_certificates_python.py  generate_ra_certificate.py  test_ra_auth_windows.py
src/python_est/: __init__.py  auth.py  ca.py  cli.py  client.py  config.py  device_tracker.py  exceptions.py  models.py  server.py  utils.py
tests/: test_basic.py
