[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "python-est"
version = "1.0.0"
description = "Professional Python implementation of RFC 7030 EST (Enrollment over Secure Transport) protocol"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Pranav Kumaar"},
]
maintainers = [
    {name = "Pranav Kumaar"},
]
keywords = [
    "EST", "RFC7030", "PKI", "Certificate", "Enrollment", "TLS", "SRP", "Bootstrap"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]
requires-python = ">=3.8"
dependencies = [
    "tlslite-ng>=0.8.0",
    "cryptography>=3.4.8",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pyyaml>=6.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "python-multipart>=0.0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "pre-commit>=3.3.0",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.22.0",
]

[project.scripts]
python-est = "python_est.cli:main"

[project.urls]
Homepage = "https://github.com/pranavkumaarofficial/python-est"
Repository = "https://github.com/pranavkumaarofficial/python-est"
"Bug Tracker" = "https://github.com/pranavkumaarofficial/python-est/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/python_est"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
    "/docs",
    "/examples",
]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true